--- a/package.json
+++ b/package.json
@@ -8,18 +8,25 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "emailjs-com": "^3.2.0",
+    "formik": "^2.4.6",
     "framer-motion": "^12.0.0-alpha.0",
     "gsap": "^3.12.5",
+    "html-format": "^1.1.7",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.14.0",
     "swiper": "^11.1.12",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "scripts": {
     "start": "react-scripts start",
