--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "ssr": "npm run build && node server/index.js"  
+    "eject": "react-scripts eject"
 
   },
   "eslintConfig": {
@@ -54,5 +53,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   }
 }
